# sc2-bot

./: .gitmodules  CMakeLists.txt  LICENSE
src/: BuildOrderExecutor.cpp  BuildOrderExecutor.h  CMakeLists.txt  CannonRush.cpp  CannonRush.h  Drawer.h  EventListener.h  Kubot.cpp  Kubot.h  MacroManager.cpp  MacroManager.h  MapSegmentation.cpp  MapSegmentation.h  SC2.cpp  SC2.h  Utils.cpp  Utils.h  main.cpp
src/utils/: BuildingPlacer.cpp  BuildingPlacer.h  Footprints.h  Grid.h  GridUtils.h  GridView.cpp  GridView.h  GridView.hpp  Map.cpp  Map.h  UnitQuery.cpp  UnitQuery.h  UnitTraits.cpp  UnitTraits.h
